--- a/velowrench.UI/Styles/CustomStyles.axaml
+++ b/velowrench.UI/Styles/CustomStyles.axaml
@@ -3,6 +3,9 @@
     <Design.PreviewWith>
         <Border Padding="20">
             <!--  Add Controls for Previewer Here  -->
+            <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                       Margin="0,10,0,0"
+                       Classes="Subtitle" Text="Select your default app language" />
         </Border>
     </Design.PreviewWith>
 
@@ -38,6 +41,13 @@
 
     <Style Selector="TextBlock.Content">
         <Setter Property="TextWrapping" Value="Wrap" />
+    </Style>
+
+    <Style Selector="TextBlock.Subtitle">
+        <Setter Property="TextWrapping" Value="Wrap" />
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="Foreground" Value="{DynamicResource SemiColorTertiary}" />
+        <Setter Property="FontWeight" Value="Light" />
     </Style>
 
     <Style Selector="TextBlock.MenuItemText">
