add language keys

--- a/velowrench.UI/Views/Home/ProfileView.axaml
+++ b/velowrench.UI/Views/Home/ProfileView.axaml
@@ -17,14 +17,14 @@
         <!--  Languages  -->
         <Border Classes="MenuGroup">
             <StackPanel>
-                <TextBlock Classes="GroupHeader" Text="Language" />
+                <TextBlock Classes="GroupHeader" Text="{x:Static res:Languages.Language}" />
                 <Border Classes="MenuItemGroup">
                     <StackPanel>
                         <Grid Margin="16,12"
                               ColumnDefinitions="Auto, *" RowDefinitions="Auto, Auto">
                             <TextBlock Grid.Row="0" Grid.Column="0"
                                        VerticalAlignment="Center"
-                                       Classes="MenuItemText" Text="App Language" />
+                                       Classes="MenuItemText" Text="{x:Static res:Languages.AppLanguage}" />
                             <ComboBox Grid.Row="0" Grid.Column="1"
                                       Width="150"
                                       HorizontalAlignment="Right"
@@ -39,7 +39,7 @@
                             </ComboBox>
                             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                                        Margin="0,10,0,0"
-                                       Classes="Subtitle" Text="Select your default app language" />
+                                       Classes="Subtitle" Text="{x:Static res:Languages.SelectDefaultAppLanguage}" />
                         </Grid>
                     </StackPanel>
                 </Border>
@@ -49,14 +49,14 @@
         <!--  Display  -->
         <Border Classes="MenuGroup">
             <StackPanel>
-                <TextBlock Classes="GroupHeader" Text="Display" />
+                <TextBlock Classes="GroupHeader" Text="{x:Static res:Languages.Display}" />
                 <Border Classes="MenuItemGroup">
                     <StackPanel>
                         <Grid Margin="16,12"
                               ColumnDefinitions="Auto, *" RowDefinitions="Auto, Auto">
                             <TextBlock Grid.Row="0" Grid.Column="0"
                                        VerticalAlignment="Center"
-                                       Classes="MenuItemText" Text="Appearance" />
+                                       Classes="MenuItemText" Text="{x:Static res:Languages.Appearance}" />
                             <ComboBox Grid.Row="0" Grid.Column="1"
                                       Width="150"
                                       HorizontalAlignment="Right"
@@ -70,7 +70,7 @@
                             </ComboBox>
                             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                                        Margin="0,10,0,0"
-                                       Classes="Subtitle" Text="Select the app color scheme" />
+                                       Classes="Subtitle" Text="{x:Static res:Languages.SelectAppColorScheme}" />
                         </Grid>
                     </StackPanel>
                 </Border>
@@ -80,19 +80,19 @@
         <!--  Measurement Units  -->
         <Border Classes="MenuGroup">
             <StackPanel>
-                <TextBlock Classes="GroupHeader" Text="Measurement units" />
+                <TextBlock Classes="GroupHeader" Text="{x:Static res:Languages.MeasurementUnits}" />
                 <Border Classes="MenuItemGroup">
                     <StackPanel>
                         <Grid Margin="16,12"
                               ColumnDefinitions="Auto, *" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto">
                             <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
                                        Margin="0,5,0,10"
-                                       Classes="Subtitle" Text="Select the default units used in the app" />
+                                       Classes="Content" Text="{x:Static res:Languages.SelectDefaultUnitsDescription}" />
 
                             <!--  Length  -->
                             <TextBlock Grid.Row="1" Grid.Column="0"
                                        Margin="0,10,0,0" VerticalAlignment="Center"
-                                       Classes="MenuItemText" Text="Length" />
+                                       Classes="MenuItemText" Text="{x:Static res:Languages.Length}" />
                             <ComboBox Grid.Row="1" Grid.Column="1"
                                       Width="100"
                                       Margin="0,10,0,0" HorizontalAlignment="Right"
@@ -106,12 +106,12 @@
                             </ComboBox>
                             <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
                                        Margin="0,0,0,5"
-                                       Classes="Subtitle" Text="Measurement of hub, rim, frame etc." />
+                                       Classes="Subtitle" Text="{x:Static res:Languages.LengthMeasurementDescription}" />
 
                             <!--  Distance  -->
                             <TextBlock Grid.Row="3" Grid.Column="0"
                                        Margin="0,10,0,0" VerticalAlignment="Center"
-                                       Classes="MenuItemText" Text="Distance" />
+                                       Classes="MenuItemText" Text="{x:Static res:Languages.Distance}" />
                             <ComboBox Grid.Row="3" Grid.Column="1"
                                       Width="100"
                                       Margin="0,10,0,0" HorizontalAlignment="Right"
@@ -125,12 +125,12 @@
                             </ComboBox>
                             <TextBlock Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
                                        Margin="0,0,0,5"
-                                       Classes="Subtitle" Text="Distances traveled etc." />
+                                       Classes="Subtitle" Text="{x:Static res:Languages.DistancesDescription}" />
 
                             <!--  Speed  -->
                             <TextBlock Grid.Row="5" Grid.Column="0"
                                        Margin="0,10,0,0" VerticalAlignment="Center"
-                                       Classes="MenuItemText" Text="Speed" />
+                                       Classes="MenuItemText" Text="{x:Static res:Languages.Speed}" />
                             <ComboBox Grid.Row="5" Grid.Column="1"
                                       Width="100"
                                       Margin="0,10,0,0" HorizontalAlignment="Right"
@@ -143,7 +143,7 @@
                                 </ComboBox.ItemTemplate>
                             </ComboBox>
                             <TextBlock Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
-                                       Classes="Subtitle" Text="Cycling speed etc." />
+                                       Classes="Subtitle" Text="{x:Static res:Languages.CyclingSpeedDescription}" />
 
                         </Grid>
                     </StackPanel>
