--- a/velowrench.UI/Styles/CustomStyles.axaml
+++ b/velowrench.UI/Styles/CustomStyles.axaml
@@ -5,7 +5,7 @@
             <!--  Add Controls for Previewer Here  -->
             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                        Margin="0,10,0,0"
-                       Classes="Subtitle" Text="Select your default app language" />
+                       Classes="Content" Text="Select your default app language" />
         </Border>
     </Design.PreviewWith>
 
