--- a/velowrench.UI/Views/Tools/GearCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/GearCalculatorView.axaml
@@ -24,7 +24,7 @@
         <!--  DataTemplate when calculation is computed  -->
         <DataTemplate x:Key="GearCalculatorComputedContentTemplate" x:DataType="vm:Tools.GearCalculatorViewModel">
             <Grid HorizontalAlignment="Center"
-                  ColumnDefinitions="Auto" RowDefinitions="Auto, Auto">
+                  ColumnDefinitions="Auto" RowDefinitions="Auto, Auto, Auto">
 
                 <ComboBox Grid.Row="0" Grid.Column="0"
                           HorizontalAlignment="Center"
@@ -58,6 +58,23 @@
                                             IsVisible="{Binding $parent[UserControl].DataContext.Chainring3TeethCount, Converter={StaticResource NotNullToBooleanConverter}}" />
                     </DataGrid.Columns>
                 </DataGrid>
+
+                <Button Grid.Row="2" Grid.Column="0"
+                        Margin="0,15" VerticalAlignment="Center"
+                        Classes="Tertiary"
+                        Command="{Binding CopyResultToClipboardCommand}"
+                        Theme="{DynamicResource OutlineButton}">
+                    <StackPanel Margin="0,10" Orientation="Horizontal">
+                        <materialIcons:MaterialIcon Width="20" Height="20"
+                                                    Margin="0,0,10,0"
+                                                    Foreground="{DynamicResource SemiColorText0}"
+                                                    Kind="ContentCopy" />
+                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center"
+                                   FontWeight="Regular"
+                                   Text="{x:Static res:Languages.CopyResultsLabel}" />
+
+                    </StackPanel>
+                </Button>
             </Grid>
         </DataTemplate>
     </UserControl.Resources>
