--- a/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/ChainLengthCalculatorView.axaml
@@ -58,6 +58,9 @@
                                    Text="{Binding RecommendedChainLinks}" />
                     </Grid>
                 </Border>
+                <TextBlock Margin="0,10,0,0"
+                           Classes="Subtitle"
+                           Text="{Binding InputSummary}" />
             </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
