--- a/velowrench.UI/Views/Tools/GearCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/GearCalculatorView.axaml
@@ -24,7 +24,7 @@
         <!--  DataTemplate when calculation is computed  -->
         <DataTemplate x:Key="GearCalculatorComputedContentTemplate" x:DataType="vm:Tools.GearCalculatorViewModel">
             <Grid HorizontalAlignment="Center"
-                  ColumnDefinitions="Auto" RowDefinitions="Auto, Auto, Auto">
+                  ColumnDefinitions="Auto" RowDefinitions="Auto, Auto, Auto, Auto">
 
                 <ComboBox Grid.Row="0" Grid.Column="0"
                           HorizontalAlignment="Center"
@@ -75,6 +75,9 @@
 
                     </StackPanel>
                 </Button>
+                <TextBlock Grid.Row="3" Grid.Column="0" Margin="0,10,0,0"
+                           Classes="Subtitle"
+                           Text="{Binding InputSummary}" />
             </Grid>
         </DataTemplate>
     </UserControl.Resources>
