--- a/velowrench.UI/Views/Tools/SpokeLengthCalculatorView.axaml
+++ b/velowrench.UI/Views/Tools/SpokeLengthCalculatorView.axaml
@@ -61,6 +61,9 @@
                                                          Value="{Binding RecommendedSpokeLengthNonGearSide}" />
                     </Grid>
                 </Border>
+                <TextBlock Margin="0,10,0,0"
+                           Classes="Subtitle"
+                           Text="{Binding InputSummary}" />
             </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
