--- a/velowrench.UI/Views/Home/ProfileView.axaml
+++ b/velowrench.UI/Views/Home/ProfileView.axaml
@@ -30,8 +30,8 @@
                                       Width="150"
                                       HorizontalAlignment="Right"
                                       IsEnabled="False"
-                                      ItemsSource="{Binding SupportedCultures}"
-                                      SelectedItem="{Binding SelectedCulture}">
+                                      ItemsSource="{Binding AppConfig.SupportedCultures}"
+                                      SelectedItem="{Binding AppConfig.CurrentCulture}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding NativeName}" />
@@ -63,8 +63,8 @@
                             <ComboBox Grid.Row="0" Grid.Column="1"
                                       Width="150"
                                       HorizontalAlignment="Right"
-                                      ItemsSource="{Binding AvailableThemes}"
-                                      SelectedItem="{Binding SelectedTheme}">
+                                      ItemsSource="{Binding AppConfig.AvailableThemes}"
+                                      SelectedItem="{Binding AppConfig.CurrentTheme}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding Key}" />
@@ -103,7 +103,7 @@
                                       Width="100"
                                       Margin="0,10,0,0" HorizontalAlignment="Right"
                                       ItemsSource="{Binding LengthAvailableUnits}"
-                                      SelectedItem="{Binding SelectedLengthUnit}">
+                                      SelectedItem="{Binding AppConfig.PreferredLengthUnit}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding Converter={StaticResource UnitDisplayConverter}}" />
@@ -124,7 +124,7 @@
                                       Width="100"
                                       Margin="0,10,0,0" HorizontalAlignment="Right"
                                       ItemsSource="{Binding DistanceAvailableUnits}"
-                                      SelectedItem="{Binding SelectedDistanceUnit}">
+                                      SelectedItem="{Binding AppConfig.PreferredDistanceUnit}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding Converter={StaticResource UnitDisplayConverter}}" />
@@ -145,7 +145,7 @@
                                       Width="100"
                                       Margin="0,10,0,0" HorizontalAlignment="Right"
                                       ItemsSource="{Binding SpeedAvailableUnits}"
-                                      SelectedItem="{Binding SelectedSpeedUnit}">
+                                      SelectedItem="{Binding AppConfig.PreferredSpeedUnit}">
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding Converter={StaticResource UnitDisplayConverter}}" />
@@ -177,7 +177,7 @@
                             <TextBlock Grid.Row="0" Grid.Column="1"
                                        HorizontalAlignment="Right" VerticalAlignment="Center"
                                        Classes="Content"
-                                       Text="{Binding Version}" />
+                                       Text="{Binding AppConfig.AppVersion}" />
                         </Grid>
                         <Button Classes="MenuItem" Command="{Binding ShowAboutPageCommand}">
                             <Grid ColumnDefinitions="*,20">
